--- a/src/containers - docker/docker-compose-with-app.yaml
+++ b/src/containers - docker/docker-compose-with-app.yaml
@@ -39,3 +39,14 @@ services:
 volumes:
   mysql-data:
     driver: local
+
+# set all needed environment variables
+export DB_USER=admin
+export DB_PWD=adminpass
+export DB_SERVER=mysql
+export DB_NAME=team-member-projects
+
+export MYSQL_ROOT_PASSWORD=rootpass
+
+export PMA_HOST=mysql
+export PMA_PORT=3306
